--- a/public/create_folder.html
+++ b/public/create_folder.html
@@ -6,6 +6,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="style2.css"/>
   <script src="js/jquery.min.js" ></script>
+  <script type="text/javascript">
+  function myfunction(){
+    const fs = require ('fs');
+    const path = require('path');
+    fs.mkdir(path.join(__dirname, 'test'),
+      { recursive: true }, (err) => {
+        if (err) {
+          return console.error(err);
+        }
+        console.log('Directory created successfully!');
+      });
+
+  }
+  </script>
 </head>
 <body>
 <div class="container-fluid">
@@ -13,7 +27,7 @@
   <div class="container-fluid">
     <p><i>Welcome <b>User</b></i></p>
     <div class="btn-group ">
-      <button type="button" class="btn btn-primary" onclick= "window.location.href= 'index.html'">Home</button>
+      <button type="button" class="btn btn-primary" onclick= "window.location.href= 'home.html'">Home</button>
       <button type="button" class="btn btn-primary">Logout</button>
     </div>
   </div>
@@ -27,7 +41,7 @@
 </div>
 <hr>
 <div class="container-fluid">
-  <button type="button" class="btn btn-primary" onclick="window.location.href= 'index.html'">
+  <button type="button" class="btn btn-primary" onclick="window.location.href= 'home.html'">
     <img class="img-responsive" src="./img/back_arrow.png" alt="Back" ></button>
 
   <center>
@@ -39,7 +53,7 @@
     <input type="text" id="folder_description" name="folder_description" maxlength="180" size= "50"><br>
     <br>
     <br>
-    <button type="button" class="btn btn-primary" onclick= ""> Create Folder </button>
+    <button type="button" class="btn btn-primary" onclick= "myfunction()"> Create Folder </button>
 
   </form>
   </center>
